--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 	<body>
 
 		<h1>Which date?</h1>
-		<input type="text" placeholder = "Enter YYYY-MM-DD" name="" value="">
+		<input type="date" placeholder = "Enter YYYY-MM-DD" name="" value="">
 		<button type="button" name="button">Get Picture</button>
 
 		<h2>Name</h2>
 		<img src="" alt="">
+		<iframe src="" frameborder="0"></iframe>
 		<h3>Description</h3>
+		
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
